// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskModel should create new one task 1`] = `
Object {
  "created": Any<String>,
  "done": false,
  "id": 4,
  "title": "新しい計画",
  "updated": Any<String>,
}
`;

exports[`TaskModel should return all tasks 1`] = `
Array [
  Object {
    "created": "2022-11-21T11:21:14.543Z",
    "done": false,
    "id": 1,
    "title": "血液レポートのグラフが空白になっている",
    "updated": "2022-11-21T11:21:14.543Z",
  },
  Object {
    "created": "2022-11-21T11:21:14.544Z",
    "done": true,
    "id": 2,
    "title": "無効にする|| ユーザーがアカウントを無効にできない",
    "updated": "2022-11-21T11:21:14.544Z",
  },
  Object {
    "created": "2022-11-21T11:21:14.545Z",
    "done": false,
    "id": 3,
    "title": "プロフィール、プロフィールの編集、ポップアップ",
    "updated": "2022-11-21T11:21:14.545Z",
  },
]
`;

exports[`TaskModel should return task with id 1 1`] = `
Object {
  "created": "2022-11-21T11:21:14.543Z",
  "done": false,
  "id": 1,
  "title": "血液レポートのグラフが空白になっている",
  "updated": "2022-11-21T11:21:14.543Z",
}
`;
